poll.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: poll
  name: poll
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll
  template:
    metadata:
      labels:
        app: poll
      name: poll
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - poll
              topologyKey: kubernetes.io/hostname
      containers:
        - envFrom:
            - configMapRef:
                name: redis
          image: epitechcontent/t-dop-600-poll:k8s
          name: poll
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 250m
              memory: 128M
            requests:
              cpu: 50m
              memory: 64M
      restartPolicy: Always
