postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: postgres
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      name: postgres
      labels:
        app: postgres
    spec:
      restartPolicy: Always
      containers:
        - name: postgres
          image: postgres:12
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 50m
              memory: 256M
            limits:
              cpu: 250m
              memory: 512M
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres
