redis.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace: default
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
      name: redis
    spec:
      containers:
        - image: redis:5.0
          name: redis
          ports:
            - containerPort: 6379
          resources:
            limits:
              cpu: 250m
              memory: 4G
            requests:
              cpu: 50m
              memory: 256M
      restartPolicy: Always
