result.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: result
  labels:
    app: result
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      name: result
      labels:
        app: result
    spec:
      restartPolicy: Always
      containers:
        - name: redis
          image: epitechcontent/t-dop-600-result:k8s
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 64M
            limits:
              cpu: 250m
              memory: 128M

      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - result
              topologyKey: "kubernetes.io/hostname"
