traefik.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: traefik
  name: traefik
  namespace: kube-public
spec:
  replicas: 2
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - traefik
              topologyKey: kubernetes.io/hostname
      containers:
        - args:
            - '--api.insecure=true'
            - '--api.dashboard=true'
            - '--providers.kubernetesingress=true'
            - '--entryPoints.web.address=:80'
          image: traefik:3.1
          name: traefik
          ports:
            - containerPort: 80
              name: web
            - containerPort: 8080
              name: dashboard
          resources:
            limits:
              cpu: 500m
              memory: 256M
            requests:
              cpu: 100m
              memory: 128M
      restartPolicy: Always
      serviceAccountName: traefik
