poll.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: poll
  labels:
    app: poll
spec:
  selector:
    app: poll
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
