traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kube-public
  name: traefik
  labels:
    app: traefik
spec:
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
    - name: dashboard
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  namespace: kube-public
  name: traefik-nodeport
  labels:
    app: traefik
spec:
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
      nodePort: 30021
    - name: dashboard
      port: 8080
      targetPort: 8080
      nodePort: 30042
  type: NodePort
