poll.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: poll
  name: poll
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: poll.dop.io
      http:
        paths:
          - backend:
              service:
                name: poll
                port:
                  number: 80
            path: /
            pathType: Prefix
